--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -19,7 +19,10 @@ legend {
   font-weight:bold
 }
 .booking-a-log #simple_search_form {
-    background: #F0F0F0;
+    background: #004FF9;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to bottom, rgba(227, 30, 36, 0), #004FF9);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to bottom, rgba(227, 30, 36, 0), #004FF9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     border-radius: 5px 5px 0 0;
     padding: 19px 15px;
 }
@@ -63,6 +66,12 @@ div#navbarCollapse {
 }
 }
 @media (max-width: 767px){
+    ul.navbar-nav li.nav-item ul {
+display: block;
+position: inherit;
+width:100%;
+background: transparent;
+}
 .navbar-dark .navbar-toggler {
     color: #fff !important;
     border-color: #222;
